examples/test/testpolicy15332.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15332
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key10: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value32
          key20: value31
          key31: value14
      podSelector:
        matchLabels:
          key18: value12
